# System_design

./: README.md
.devcontainer/: devcontainer.json
task1/: README.md  workspace.dsl
task2/conference-api/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  openapi.yaml
task2/conference-api/configs/: static_config.yaml
task2/conference-api/src/: main.cpp
task2/conference-api/src/auth/: auth_utils.cpp  auth_utils.hpp
task2/conference-api/src/handlers/: add_talk_to_conference_handler.cpp  add_talk_to_conference_handler.hpp  create_conference_handler.cpp  create_conference_handler.hpp  create_talk_handler.cpp  create_talk_handler.hpp  get_all_talks_handler.cpp  get_all_talks_handler.hpp  get_conference_talks_handler.cpp  get_conference_talks_handler.hpp  get_user_by_login_handler.cpp  get_user_by_login_handler.hpp  login_handler.cpp  login_handler.hpp  register_user_handler.cpp  register_user_handler.hpp  search_users_handler.cpp  search_users_handler.hpp
task2/conference-api/src/models/: user.hpp
task2/conference-api/src/storage/: in_memory_storage.cpp  in_memory_storage.hpp
task3/conference-api/: .dockerignore  CMakeLists.txt  Makefile  README.md  docker-compose.yaml
task3/conference-api/.devcontainer/: devcontainer.json
task3/conference-api/configs/: config_vars.yaml  static_config.yaml
task3/conference-api/docs/: optimization.md
task3/conference-api/sql/: data.sql  queries.sql  schema.sql
task3/conference-api/src/: main.cpp
task3/conference-api/src/auth/: auth_utils.cpp  auth_utils.hpp
task3/conference-api/src/handlers/: add_talk_to_conference_handler.cpp  add_talk_to_conference_handler.hpp  create_talk_handler.cpp  (+15 more)
(+5 files in other folders)
